--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>reimer.tz</title>
 
-  <link rel="stylesheet" href="/_styles/portfolio.css" />
+  <link rel="stylesheet" href="/_styles/index.css" />
   <link rel="stylesheet" href="/_components/rz-3d/rz-3d.css" />
   <link rel="stylesheet" href="/_components/rz-3d-img/rz-3d-img.css" />
   <link rel="stylesheet" href="/_components/rz-colorize/rz-colorize.css" />
