--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta name="description" content="Where the web makes sense" />
   <meta name="keywords" content="Pierre Reimertz Web Developer" />
   <meta name="author" content="Piérre Reimertz" />
-
   <title>reimer.tz</title>
 
-  <link rel="stylesheet" href="/_styles/index.css" />
+  <link rel="stylesheet" href="/_styles/portfolio.css" />
   <link rel="stylesheet" href="/_components/rz-3d/rz-3d.css" />
   <link rel="stylesheet" href="/_components/rz-3d-img/rz-3d-img.css" />
   <link rel="stylesheet" href="/_components/rz-colorize/rz-colorize.css" />
@@ -16,16 +15,16 @@
 
   <body>
     <rz-video-embed>
-      <rz-colorize mode="multi" target="background">
-        <rz-3d shadow-layers="3" shadow-z-step="60">
-          <header>
-            <rz-3d-img
-              src="https://cdn.hifilabs.co/08845e7b-79c4-4e0f-c102-0f9ce6cd1000/thumbnail"
-              alt="Pierre Reimertz"
-            ></rz-3d-img>
-            <pre
-              style="white-space: pre-wrap; font-family: monospace; line-height: 2.1"
-            >hi, my name is piérre reimertz.
+    <rz-colorize mode="multi" target="background">
+      <rz-3d shadow-layers="3" shadow-z-step="60">
+        <header>
+          <rz-3d-img
+            src="https://cdn.hifilabs.co/08845e7b-79c4-4e0f-c102-0f9ce6cd1000/thumbnail"
+            alt="Pierre Reimertz"
+          ></rz-3d-img>
+          <pre
+            style="white-space: pre-wrap; font-family: monospace; line-height: 2.1"
+          >hi, my name is piérre reimertz.
 i'm a developer, designer and occasional musician.
 
 ╭ co-founder / cto at <a href="https://hifilabs.co" target="_blank">hifi labs</a>
@@ -80,9 +79,9 @@ security ╮
 ├ <a href="http://x.com/reimertz" target="_blank">x</a>
 ├ <a href="https://www.linkedin.com/in/reimertz" target="_blank">linkedin</a>
 ╰ <a href="mailto:pierre.reimertz@gmail.com">email</a></pre>
-          </header>
-        </rz-3d>
-      </rz-colorize>
+        </header>
+      </rz-3d>
+    </rz-colorize>
     </rz-video-embed>
 
     <!-- Load components -->
