--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ security ╮
 ├ <a href="http://github.com/reimertz" target="_blank">github</a>
 ├ <a href="http://x.com/reimertz" target="_blank">x</a>
 ├ <a href="https://www.linkedin.com/in/reimertz" target="_blank">linkedin</a>
-╰ <a href="mailto:pierre.reimertz@gmail.com">email</a></pre>
+├ <a href="mailto:pierre.reimertz@gmail.com">email</a>
+╰ <a href="https://buy.stripe.com/7sY00j51L1er4xwfwZ6J200" target="_blank">digital hug</a></pre>
         </header>
       </rz-3d>
     </rz-colorize>
